<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".src.register.authemailcode.AuthEmailActivity"
    android:padding="@dimen/register_padding_start_and_end">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"

        android:text="@string/tv_authemail_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/dialog_description_text" />
    <TextView
        android:id="@+id/tv_authemail_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="15dp"
        android:gravity="center"

        android:text="@string/tv_authemail_email"
        android:textColor="@color/black"
        android:textSize="@dimen/dialog_description_text" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"

        android:text="@string/tv_authemail_description"
        android:textSize="@dimen/dialog_description_text" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"

        android:text="@string/tv_authemail_resend"
        android:textColor="@color/blue_active"
        android:textSize="@dimen/dialog_description_text" />
    <EditText
            android:id="@+id/et_code"
            style="@style/et_account"

            android:layout_marginTop="15dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"

            android:inputType="textCapCharacters"
            android:hint="@string/et_authemail_hint"
            android:textColor="@color/black"
            android:maxLength="6" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register_next"
            style="@style/btn_blue_text"
            android:layout_marginTop="15dp"

            android:text="@string/btn_next" />


</LinearLayout>