<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_round_bg"
    android:layout_margin="@dimen/dialog_margin"
    android:layout_gravity="center"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/dialog_padding_top_and_bottom"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="@dimen/et_login_padding"
        android:layout_marginEnd="@dimen/et_login_padding"

        android:text="@string/tv_login_dialog_title"
        android:textSize="@dimen/dialog_title_text"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="@dimen/dialog_padding_top_and_bottom"
        android:layout_marginStart="@dimen/et_login_padding"
        android:layout_marginEnd="@dimen/et_login_padding"

        android:text="@string/tv_login_dialog_description"
        android:textSize="@dimen/dialog_description_text"
        android:textColor="@color/et_dialog_gray"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/et_stroke_whitegray" />
    
    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="15dp"

        style="@style/Widget.AppCompat.Button.Borderless"

        android:text="@string/btn_confirm"
        android:textSize="@dimen/dialog_btn_text"
        android:textColor="@color/blue_active"
        android:textStyle="bold" />

</LinearLayout>