<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginStart="@dimen/register_padding_start_and_end"
        android:layout_marginEnd="@dimen/register_padding_start_and_end">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/et_phone"
                style="@style/et_account"

                android:layout_marginTop="15dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"

                android:inputType="phone"
                android:hint="@string/et_phone_hint"
                android:textColor="@color/black"
                android:maxLength="13" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="15dp"
            android:gravity="center"

            android:text="@string/tv_phone_helper"
            android:textSize="@dimen/tv_helper"
            android:textColor="@color/et_dialog_gray" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register_next"
            style="@style/btn_blue_text"
            android:layout_marginTop="15dp"

            android:text="@string/btn_next" />

    </LinearLayout>

</FrameLayout>